@@ -1,5 +1,10 @@
 2002-02-11  Mark McLoughlin  <mark@skynet.ie>
 
+	* Makefile.am: (SUBDIRS): remove gnome-terminal. See
+	the profterm module for the Gnome 2.0 terminal.
+
+2002-02-11  Mark McLoughlin  <mark@skynet.ie>
+
 	* Netscape.desktop.in: just point at netscape. We don't
 	ship gnome-moz-remote anymore.
 
